Empresa add, depois vou fazer o controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/HelpCar
-spring.datasource.username=postgres
-spring.datasource.password=28011999
+spring.datasource.url=jdbc:mysql://localhost:3306/helpcar
+spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=update
